dev-1.2.2.75
Went through all the code, and refactored it wherever needed.
(This shouldn't actually affect anything, it should just improve code readability. So HOPEFULLY nothing breaks)